--- a/package.json
+++ b/package.json
@@ -24,9 +24,16 @@
     "css-loader": "0.28.11",
     "express": "4.16.3",
     "file-loader": "1.1.11",
+    "history": "^4.7.2",
     "prop-types": "15.5.8",
     "react": "15.5.0",
     "react-dom": "15.5.0",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0",
+    "redux-logger": "^3.0.6",
+    "redux-router-middleware": "^1.0.0-beta.20",
+    "selectn": "^1.1.2",
+    "simple-normalizr": "^1.2.3",
     "style-loader": "0.20.3",
     "url-loader": "1.0.1",
     "webpack": "4.5.0",
