--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack",
-    "start": "node server.js"
+    "start": "node server.js",
+    "prod": "npm run build --prod:mode=true"
   },
+  "pre-commit": "prod",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Vasikaran/vasikaran.github.io.git"
@@ -25,13 +27,16 @@
     "express": "4.16.3",
     "file-loader": "1.1.11",
     "history": "^4.7.2",
-    "prop-types": "15.5.8",
-    "react": "15.5.0",
-    "react-dom": "15.5.0",
+    "pre-commit": "^1.2.2",
+    "prop-types": "^15.6.1",
+    "react": "^16.3.2",
+    "react-codemirror": "^1.0.0",
+    "react-codemirror2": "^5.0.1",
+    "react-dom": "^16.3.2",
     "react-redux": "^5.0.7",
-    "redux": "^4.0.0",
+    "redux": "^3.6.0",
     "redux-logger": "^3.0.6",
-    "redux-router-middleware": "^1.0.0-beta.20",
+    "redux-router-middleware": "file:../../my-libraries/redux-router-middleware",
     "selectn": "^1.1.2",
     "simple-normalizr": "^1.2.3",
     "style-loader": "0.20.3",
